overflow fix

--- a/styles/mondobd/_main.scss
+++ b/styles/mondobd/_main.scss
@@ -174,6 +174,10 @@ li.choice-group {
   .definition {
     border-bottom: 1px dotted;
   }
+  
+  #cboxLoadedContent {
+    overflow-y: scroll;
+  }
 }
 
 /* Twitter Boostrap overrides */
